--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "date-fns": "^3.6.0",
         "dotenv": "^16.4.5",
         "multer": "^1.4.5-lts.1",
+        "path": "^0.12.7",
         "pg": "^8.11.5",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
