--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,31 @@
-version: '3.1'
+version: '1.0'
 
 services:
 
-  # mongo:
-  #   image: mongo
-  #   ports:
-  #     - 27017:27017
-  #   restart: always
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: admin
-  #     MONGO_INITDB_ROOT_PASSWORD: admin
-  #   volumes:
-  #     - mongo-data:/data/db
-
-  app:
-    image: rockyoperation/hao-nest-app:1.0
-    ports:
-      - 3000:3009
+  postgres:
+    image: postgres
+    restart: always
     environment:
-      DATABASE_URI: mongodb://admin:admin@mongo:27017/?authMechanism=DEFAULT
-      PORT: 3009
-    # depends_on:
-    #   - mongo
+      POSTGRES_PASSWORD: 992002
+      POSTGRES_DB: jwat_nest_practice
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
-# volumes:
-#   mongo-data:
-  
+  backend:
+    image: rockyoperation/jwat-knowledge-sharing-backend:1.0
+    ports:
+      - 3001:3009
+    environment:
+      PORT: 3009
+      DB_NAME: jwat_nest_practice
+      DB_PORT: 5432
+      DB_USERNAME: postgres
+      DB_PASSWORD: 992002
+      DB_HOST: postgres
+    depends_on:
+      - postgres
+
+volumes:
+  postgres-data:
