--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,20 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: 992002
-      POSTGRES_DB: jwat_nest_practice
+      POSTGRES_DB: jwat_knowledge_sharing
     ports:
       - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U postgres -d jwat_knowledge_sharing"
+        ]
+      interval: 20s
+      timeout: 5s
+      retries: 5
 
   backend:
     image: rockyoperation/jwat-knowledge-sharing-backend:1.0
@@ -19,13 +28,14 @@ services:
       - 3001:3009
     environment:
       PORT: 3009
-      DB_NAME: jwat_nest_practice
+      DB_NAME: jwat_knowledge_sharing
       DB_PORT: 5432
       DB_USERNAME: postgres
       DB_PASSWORD: 992002
       DB_HOST: postgres
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
 volumes:
   postgres-data:
