--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "migration:revert": "npm run typeorm -- migration:revert"
     },
     "dependencies": {
+        "@nestjs-modules/mailer": "^2.0.2",
+        "@nestjs/bull": "^10.1.1",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.2",
         "@nestjs/core": "^10.0.0",
@@ -32,13 +34,18 @@
         "@nestjs/platform-express": "^10.3.9",
         "@nestjs/typeorm": "^10.0.2",
         "bcrypt": "^5.1.1",
+        "bull": "^4.12.9",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "cloudinary": "^2.2.0",
         "cors": "^2.8.5",
         "date-fns": "^3.6.0",
         "dotenv": "^16.4.5",
+        "fs": "^0.0.1-security",
+        "handlebar": "^1.0.0",
+        "handlebars": "^4.7.8",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.13",
         "path": "^0.12.7",
         "pg": "^8.11.5",
         "reflect-metadata": "^0.2.0",
@@ -54,6 +61,7 @@
         "@types/jest": "^29.5.2",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.12.12",
+        "@types/nodemailer": "^6.4.15",
         "@types/supertest": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
