--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "handlebar": "^1.0.0",
         "handlebars": "^4.7.8",
         "multer": "^1.4.5-lts.1",
+        "nestjs-typeorm-paginate": "^4.0.4",
         "nodemailer": "^6.9.13",
         "path": "^0.12.7",
         "pg": "^8.11.5",
