--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^10.3.9",
         "@nestjs/typeorm": "^10.0.2",
+        "@types/fs-extra": "^11.0.4",
         "bcrypt": "^5.1.1",
         "bull": "^4.12.9",
         "class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
         "date-fns": "^3.6.0",
         "dotenv": "^16.4.5",
         "fs": "^0.0.1-security",
+        "fs-extra": "^11.2.0",
         "handlebar": "^1.0.0",
         "handlebars": "^4.7.8",
         "multer": "^1.4.5-lts.1",
