--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,23 +18,47 @@ services:
           "CMD-SHELL",
           "pg_isready -U postgres -d jwat_knowledge_sharing"
         ]
-      interval: 20s
-      timeout: 5s
-      retries: 5
+      interval: 2s
+      timeout: 2s
+      retries: 2
+  
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 2s
+      timeout: 2s
+      retries: 2
 
   backend:
-    image: rockyoperation/jwat-knowledge-sharing-backend:1.0
+    image: rockyoperation/knowledge-sharing-backend
     ports:
-      - 3001:3009
+      - 3001:3001
     environment:
-      PORT: 3009
+      PORT: 3001
       DB_NAME: jwat_knowledge_sharing
       DB_PORT: 5432
       DB_USERNAME: postgres
       DB_PASSWORD: 992002
       DB_HOST: postgres
+      ACCESS_TOKEN_KEY: accesstokenkeyjwat2402
+      REFRESH_TOKEN_KEY: refreshtokenkeyjwat2402
+      CLOUDINARY_NAME: dzfwvoijo
+      CLOUDINARY_API_KEY: 749281176233987
+      CLOUDINARY_API_SECRET: BzQjqSewHKCgvfLjeosAX8x8Z0o
+      MAIL_HOST: smtp.gmail.com
+      MAIL_PORT: 587
+      MAIL_USER: phuochoang.tran.clv@gmail.com
+      MAIL_PASSWORD: hbxtaxafscymmscp
+      DEFAULT_MAIL_FROM: phuochoang.tran.clv@gmail.com
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
 
 volumes:
