--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@nestjs/platform-express": "^10.3.9",
     "@nestjs/typeorm": "^10.0.2",
     "@types/fs-extra": "^11.0.4",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bull": "^4.12.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
