[Dockerize and Docker-compose] Completely docker-compose the backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       interval: 2s
       timeout: 2s
       retries: 2
-  
+
   redis:
     image: redis
     ports:
@@ -31,6 +31,35 @@ services:
     healthcheck:
       test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
       interval: 2s
+      timeout: 2s
+      retries: 2
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.14.1
+    environment:
+      - node.name=elasticsearch
+      - cluster.name=datasearch
+      - xpack.security.enabled=false
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - cluster.initial_master_nodes=elasticsearch
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    ports:
+      - "9200:9200"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:9200/_cluster/health"
+        ]
+      interval: 15s
       timeout: 2s
       retries: 2
 
@@ -57,45 +86,28 @@ services:
       DEFAULT_MAIL_FROM: phuochoang.tran.clv@gmail.com
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      ELASTICSEARCH_NODE: http://elasticsearch:9200
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
+    # healthcheck:
+    #   test: [ "CMD", "curl", "-f", "http://localhost:3001/api/health" ]
+    #   interval: 2s
+    #   timeout: 2s
+    #   retries: 2
 
 volumes:
   postgres-data:
   redis-data:
-
-
-# version: "3"
-
-# services:
-#   elasticsearch:
-#     image: docker.elastic.co/elasticsearch/elasticsearch:8.14.1
-#     container_name: elasticsearch
-#     environment:
-#       - node.name=elasticsearch
-#       - cluster.name=datasearch
-#       - xpack.security.enabled=false
-#       - bootstrap.memory_lock=true
-#       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-#       - cluster.initial_master_nodes=elasticsearch
-#     ulimits:
-#       memlock:
-#         soft: -1
-#         hard: -1
-#     ports:
-#       - "9200:9200"
-#     volumes:
-#       - esdata:/usr/share/elasticsearch/data
+  esdata:
+    driver: local
 
 ## No need to use this container
 #   kibana:
 #     image: docker.elastic.co/kibana/kibana:8.14.1
 #     ports:
 #       - "5601:5601"
-
-# volumes:
-#   esdata:
-#     driver: local
