--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
