--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "handlebar": "^1.0.0",
     "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
+    "nest-winston": "^1.10.0",
     "nestjs-typeorm-paginate": "^4.0.4",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
