--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.9",
     "@types/fs-extra": "^11.0.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.9",
@@ -57,6 +59,7 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "streamifier": "^0.1.1",
     "typeorm": "^0.3.20"
   },
